--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   <hr />
   <h2>Other</h2>
   <ul>
-    <li><a href="./public/contact.html">Contact</a></li>
-    <li><a href="./public/hobbies.html">Hobbies</a></li>
+    <li><a href="./public/contact.html"><h2>Contact</h2></a></li>
+    <li><a href="./public/hobbies.html"><h2>Hobbies</h2></a></li>
   </ul>
   <footer>
     <p>&copy Thokozani Tsotetsi. All rights reserved</p>
